--- a/public/login.html
+++ b/public/login.html
@@ -27,9 +27,12 @@
         <p class="text-center text-white mt-4">¿No tienes una cuenta? <a href="./register.html" class="text-purple-400 font-semibold">Regístrate</a></p>
         <p id="errorMessage" class="text-red-500 text-center mt-2 hidden"></p>
 
-        <p class="text-center text-gray-600 mt-4">
-            <a href="./index.html" class="text-purple-400 font-semibold hover:underline">Volver</a>
-        </p>
+        <div class="flex justify-center mt-4">
+                <a href="./index.html" 
+                    class="bg-gray-800 text-purple-400 font-semibold px-4 py-2 rounded-lg transition-all duration-300 hover:bg-gray-700 hover:scale-105 shadow-md">
+                    Volver
+                </a>
+            </div>
     </div>
 
    <script>
