--- a/public/register.html
+++ b/public/register.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="h-screen flex items-center justify-center bg-gradient-to-r from-gray-300 to-gray-600">
-    <div class="bg-gray-900 p-8 rounded-lg shadow-2xl w-96 border border-gray-200 backdrop-blur-md bg-opacity-80">
+    <div class="bg-gray-900 p-10 rounded-lg shadow-2xl w-[30rem] border border-gray-200 backdrop-blur-md bg-opacity-80">
         <h2 class="text-3xl font-bold text-center text-purple-400 mb-6">Registro</h2>
         <form id="registerForm" class="space-y-4">
             <div class="relative">
@@ -50,9 +50,12 @@
             <button type="submit" class="w-full bg-gray-500 text-purple-400 p-3 rounded-lg hover:bg-gray-900 text-lg transition-all">Registrarse</button>
         </form>
         <p class="text-center text-white mt-4">¿Ya tienes una cuenta? <a href="login.html" class="text-purple-400 font-semibold">Inicia sesión</a></p>
-        <p class="text-center text-gray-600 mt-4">
-            <a href="./index.html" class="text-purple-400 font-semibold hover:underline">Volver</a>
-        </p>
+            <div class="flex justify-center mt-4">
+                <a href="./index.html" 
+                    class="bg-gray-800 text-purple-400 font-semibold px-4 py-2 rounded-lg transition-all duration-300 hover:bg-gray-700 hover:scale-105 shadow-md">
+                    Volver
+                </a>
+            </div>
     </div>
 
     <script>
